--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>ru.checkdev.mock.MockSrv</mainClass>
+                    <finalName>mock</finalName>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
