--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.file.name=logs/mock.log
 ## Security
 security.oauth2.resource.userInfoUri=http://localhost:9900/user
 # Datasource
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/mock
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/cd_mock
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
